# IntProSim

./: B1937+21.ipynb  pyproject.toml
pulsar_sim/: cli.py  dm_series.py  fits_writer.py  io.py  profiles.py  run_simulation.py  utils.py
pulsar_sim/pulsar_sim/: __init__.py  parameters.py  scat_series.py
scripts/: run_simulation.py
