[build-system]
[project]
name = "pulsar-sim"
version = "0.1.0"
description = "A pulsar simulation and PSRFITS generation toolkit."

authors = [
    { name = "M. Krishnakumar" },
    { name = "Jalormi Brahmachari" },
    { name = "Mayuresh Surnis" }
]

readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"

dependencies = [
    "numpy",
    "astropy",
    "psrchive @ git+https://github.com/psrchive/psrchive.git",
]

[project.scripts]
pulsar-sim = "pulsar_sim.cli:main"